<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/school_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/school_name"
            app:layout_constraintTop_toBottomOf="@id/math"
            tools:viewBindingType="TextView" />

        <TextView
            android:id="@+id/reading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sat_reading"
            app:layout_constraintTop_toBottomOf="@id/math"
            tools:viewBindingType="TextView" />

        <TextView
            android:id="@+id/writing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sat_writing"
            app:layout_constraintTop_toBottomOf="@id/reading"
            tools:viewBindingType="TextView" />

        <TextView
            android:id="@+id/math"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sat_math"
            app:layout_constraintTop_toBottomOf="@id/numberOfTestTaker"
            tools:viewBindingType="TextView" />

        <TextView
            android:id="@+id/numberOfTestTaker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number_of_sat_test_taker"
            app:layout_constraintTop_toTopOf="parent"
            tools:viewBindingType="TextView" />


    </LinearLayout>

</androidx.cardview.widget.CardView><!--</androidx.constraintlayout.widget.ConstraintLayout>-->